--- a/339-A3-update/website/css/main.css
+++ b/339-A3-update/website/css/main.css
@@ -794,6 +794,7 @@ td{
   margin-bottom: 0.8rem;
   margin-top: 3rem;
   text-align: center;
+  width: 100%;
 }
 
 .product-header.category {
